# coco-guest-components

./: Cargo.toml
.github/workflows/: trustee-attester.yml
aa-client/: Cargo.toml  Makefile  README.md
aa-client/docker/: RHEL9_Containerfile  rhel93.repo
aa-client/initrd/: Makefile  README.md  aa-client-service.sh  aa-client.service  install-dracut-files.sh  module-setup.sh
aa-client/src/: lib.rs  main.rs
attestation-agent/attester/: Cargo.toml
attestation-agent/attester/src/tdx/: mod.rs
