[package]
name = "aa-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#as-types = { git = "https://github.com/uril/coco-attestation-service.git#test" }
anyhow.workspace = true
# api-server.workspace = true
base64.workspace = true
clap = { version = "4.0.29", features = ["derive"] }
env_logger.workspace = true
jwt-simple = "0.11.4"
log.workspace = true
reqwest = { version = "0.11.18", default-features = false, features = ["cookies", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
kbs_protocol = { path = "../attestation-agent/kbs_protocol" }
